fix: include duration, cleanup

--- a/text_preprocessing.ipynb
+++ b/text_preprocessing.ipynb
@@ -8,25 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Example output dataset\n",
-    "| Text | start | end | duration | text_len | sentiment | entities |\n",
-    "| ---- | ----- | --- | -------- | -------- | --------- | -------- |\n",
-    "| foobar | 0.08 | | 5.360 | 6 | foo_sentiment | foo_entities | \n",
-    "| barfoobar | 2.04 | | 6.830 | 9 | foo_sentiment | foo_entities |\n",
-    "| heehoo | 21.098 | | 2.10 | 6 | foo_sentiment | foo_entities |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "note: summary might be something that is irrelevent until clipped at the end of the pipeline?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -34,12 +15,10 @@
    "source": [
     "import os\n",
     "\n",
-    "### === Error Handles === ###\n",
+    "### === Helpers === ###\n",
     "def perror(msg):\n",
     "    print(\"error: \" + msg)\n",
     "\n",
-    "### === Helpers === ###\n",
-    "# Create file and set timestamp\n",
     "def touch(path):\n",
     "    with open(path, 'a') as f:\n",
     "        os.utime(path, None) # set access and modified times\n",
@@ -85,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import whisper_timestamped as whisper # \n",
+    "import whisper_timestamped as whisper\n",
     "import json\n",
     "\n",
     "def get_transcript(input_file, output_file):\n",
@@ -142,11 +121,14 @@
     "def get_end(row):\n",
     "    return row['segments']['end']\n",
     "\n",
+    "def get_duration(row):\n",
+    "    return round(abs(row['segments']['end'] - row['segments']['start']), 2)\n",
+    "\n",
     "df['text'] = df.apply(get_text,axis=1)\n",
     "df['text_len'] = df.apply(get_length,axis=1)\n",
     "df['start'] = df.apply(get_start,axis=1)\n",
     "df['end'] = df.apply(get_end,axis=1)\n",
-    "\n",
+    "df['duration'] = df.apply(get_duration,axis=1)\n",
     "df"
    ]
   },
@@ -221,12 +203,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Labels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Label\n",
     "# https://catalog.ldc.upenn.edu/docs/LDC2013T19/OntoNotes-Release-5.0.pdf\n",
     "labels_spacy = \"\"\"\n",
     "PERSON                        People, including fictional\n",
@@ -333,12 +321,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TODO visualizations"
+    "note: summary might be something that is irrelevent until clipped at the end of the pipeline?"
    ]
   }
  ],
