feat(sentiment): split up sentiment labels

--- a/text_preprocessing.ipynb
+++ b/text_preprocessing.ipynb
@@ -87,7 +87,7 @@
     "else: \n",
     "    try:\n",
     "        with open(OUTPUT_FILE, 'r') as f:\n",
-    "            transcript = f.read()\n",
+    "            transcript = f.read()   \n",
     "            transcript = json.loads(transcript)\n",
     "    except:\n",
     "        perror(\"unable to load data from cache\")"
@@ -176,7 +176,19 @@
    "source": [
     "def get_sentiment(row):\n",
     "    return sentiment_pipe(row['text'])[0] # produces a list of dicts for each label\n",
+    "\n",
     "df['sentiment'] = df.apply(get_sentiment, axis=1)\n",
+    "\n",
+    "def unpack_sentiment(row):\n",
+    "    sentiment = row['sentiment']\n",
+    "    if sentiment:\n",
+    "        for label_dict in sentiment:\n",
+    "            label = label_dict['label'] + \"_sentiment\"\n",
+    "            score = label_dict['score']\n",
+    "            row[label] = score\n",
+    "    return row\n",
+    "\n",
+    "df = df.apply(unpack_sentiment, axis=1)\n",
     "\n",
     "df"
    ]
