perf: use np array during forward pass

--- a/vision_preprocessing.ipynb
+++ b/vision_preprocessing.ipynb
@@ -28,16 +28,9 @@
     "        return path\n",
     "\n",
     "    print(\"path already exists\")\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VIDEO_URL = \"https://www.youtube.com/watch?v=_VjyPShDsjo\"\n",
+    "    return\n",
+    "\n",
+    "VIDEO_URL = \"https://www.youtube.com/watch?v=33pBg_UaeJk\"\n",
     "\n",
     "OUTPUT_DIR = './cache/'  # target output for preoprocessing is cache\n",
     "extracted_id = VIDEO_URL.split(\"/\")[-1]\n",
@@ -75,7 +68,6 @@
    "outputs": [],
    "source": [
     "import av\n",
-    "import torch\n",
     "import numpy as np\n",
     "from transformers import AutoProcessor, AutoModel\n",
     "from huggingface_hub import hf_hub_download\n",
@@ -147,9 +139,7 @@
     "container = av.open(OUTPUT_FILE)\n",
     "SEGMENT_LENGTH = container.streams.video[0].frames\n",
     "\n",
-    "# sample 8 frames\n",
-    "indices = sample_frame_indices(clip_len=8, frame_sample_rate=1, seg_len=SEGMENT_LENGTH, end_idx=100)\n",
-    "video = read_video_pyav(container, indices)"
+    "print(SEGMENT_LENGTH)\n"
    ]
   },
   {
@@ -165,8 +155,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(0,SEGMENT_LENGTH, 8):\n",
-    "    df.loc[len(df)] = [i, i+SAMPLE_SIZE]\n",
+    "for i in range(0, (SEGMENT_LENGTH // SAMPLE_SIZE)):\n",
+    "    df.loc[len(df)] = [i * SAMPLE_SIZE, (i * SAMPLE_SIZE) + SAMPLE_SIZE]\n",
+    "\n",
+    "# Account for any clipping\n",
+    "last_value = df['end_frame'].iloc[-1]\n",
+    "df.loc[len(df)] = [last_value, SEGMENT_LENGTH-1]\n",
     "\n",
     "df"
    ]
@@ -231,7 +225,7 @@
     "# for clipping\n",
     "\n",
     "# TODO consider a pipeline that allows user input to be sent to a LLM to prompt and create this list\n",
-    "\n",
+    "'''\n",
     "interesting_moments = [\n",
     "    \"A surprising or unexpected answer\",\n",
     "    \"A candid or emotional confession\",\n",
@@ -249,7 +243,14 @@
     "    \"A candid critique of themselves or others\",\n",
     "    \"A moving tribute to a mentor or idol\",\n",
     "    \"A surprising revelation about their own strengths or weaknesses\",\n",
-    "]\n"
+    "]\n",
+    "'''\n",
+    "\n",
+    "video_labels = [\n",
+    "    \"Highlight Worthy\",\n",
+    "    \"Neutral\",\n",
+    "    \"Not Highlight Worthy\",\n",
+    "]"
    ]
   },
   {
@@ -272,9 +273,8 @@
     "\n",
     "videoreader = VideoReader(OUTPUT_FILE, num_threads=1, ctx=cpu(0))\n",
     "\n",
-    "\n",
     "def get_video(row):\n",
-    "    return videoreader.get_batch(sample_frame_indices(clip_len=8, frame_sample_rate=1, seg_len=container.streams.video[0].frames, end_idx=row['end_frame'])).asnumpy()\n",
+    "    return videoreader.get_batch(sample_frame_indices(clip_len=SAMPLE_SIZE, frame_sample_rate=FRAME_SAMPLE_RATE, seg_len=container.streams.video[0].frames, end_idx=row['end_frame'])).asnumpy()\n",
     "\n",
     "df['video'] = df.apply(get_video, axis=1)\n",
     "\n",
@@ -289,18 +289,18 @@
    "source": [
     "import torch\n",
     "\n",
-    "# TODO MAJOR perf bottleneck right here\n",
+    "# TODO MAJOR perf bottleneck right here, batch this with torch dataset loader or something\n",
     "def get_classification(row):\n",
-    "    video = row['video']\n",
-    "    inputs = processor(text=interesting_moments, videos=list(video), return_tensors=\"pt\", padding=True)\n",
+    "    video = numpy.array(row['video']) # perf improvement \n",
+    "    inputs = processor(text=video_labels, videos=list(video), return_tensors=\"pt\", padding=True)\n",
     "    # forward pass\n",
     "    with torch.no_grad():\n",
     "        outputs = model(**inputs)\n",
     "    \n",
     "    probs = outputs.logits_per_video.softmax(dim=1)\n",
     "    _, predicted = torch.max(probs, dim=1)\n",
-    "    #_, top, = torch.topk(probs, 5)\n",
-    "    return interesting_moments[predicted.item()]\n",
+    "\n",
+    "    return video_labels[predicted.item()]\n",
     "\n",
     "df['classification'] = df.apply(get_classification, axis=1)\n"
    ]
