--- a/vision_preprocessing.ipynb
+++ b/vision_preprocessing.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "# Vision Preprocessing\n",
     "\n",
-    "The vision pipeline proposes the following:\n",
-    "- Zero shot classification (what best describes what is happening in this video during sampling)\n",
-    "- Image recognition"
+    "Features:\n",
+    "- Zero shot classification (what best describes what is happening in this video during sampling)"
    ]
   },
   {
@@ -74,8 +73,8 @@
     "np.random.seed(0)\n",
     "\n",
     "import pandas as pd\n",
-    "from PIL import Image\n",
-    "df = pd.DataFrame(columns=['start_frame', 'end_frame'])\n",
+    "\n",
+    "df = pd.DataFrame(columns=['start_frame', 'end_frame', 'start_time', 'end_time'])\n",
     "\n",
     "def read_video_pyav(container, indices):\n",
     "    '''\n",
@@ -127,6 +126,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup VideoReader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from decord import VideoReader, cpu\n",
+    "\n",
+    "videoreader = VideoReader(OUTPUT_FILE, num_threads=1, ctx=cpu(0))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -155,12 +172,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "avg_fps = videoreader.get_avg_fps()\n",
+    "\n",
     "for i in range(0, (SEGMENT_LENGTH // SAMPLE_SIZE)):\n",
-    "    df.loc[len(df)] = [i * SAMPLE_SIZE, (i * SAMPLE_SIZE) + SAMPLE_SIZE]\n",
+    "    start_frame = i * SAMPLE_SIZE\n",
+    "    end_frame = (i * SAMPLE_SIZE) + SAMPLE_SIZE\n",
+    "    start_time = round(start_frame / avg_fps, 2)\n",
+    "    end_time = round(end_frame / avg_fps, 2)\n",
+    "\n",
+    "\n",
+    "    df.loc[len(df)] = [start_frame, end_frame, start_time, end_time]\n",
     "\n",
     "# Account for any clipping\n",
     "last_value = df['end_frame'].iloc[-1]\n",
-    "df.loc[len(df)] = [last_value, SEGMENT_LENGTH-1]\n",
+    "df.loc[len(df)] = [last_value, SEGMENT_LENGTH-1, round(last_value / avg_fps), round(SEGMENT_LENGTH-1 / avg_fps)]\n",
     "\n",
     "df"
    ]
@@ -268,10 +293,7 @@
    "source": [
     "import pandas as pd\n",
     "from PIL import Image\n",
-    "from decord import VideoReader, cpu\n",
     "import numpy\n",
-    "\n",
-    "videoreader = VideoReader(OUTPUT_FILE, num_threads=1, ctx=cpu(0))\n",
     "\n",
     "def get_video(row):\n",
     "    return videoreader.get_batch(sample_frame_indices(clip_len=SAMPLE_SIZE, frame_sample_rate=FRAME_SAMPLE_RATE, seg_len=container.streams.video[0].frames, end_idx=row['end_frame'])).asnumpy()\n",
@@ -302,7 +324,7 @@
     "\n",
     "    return video_labels[predicted.item()]\n",
     "\n",
-    "df['classification'] = df.apply(get_classification, axis=1)\n"
+    "df['vision_classification'] = df.apply(get_classification, axis=1)\n"
    ]
   },
   {
