chore: cleanup globals

--- a/vision_preprocessing.ipynb
+++ b/vision_preprocessing.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "path already exists\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -31,7 +39,7 @@
     "\n",
     "VIDEO_URL = \"https://www.youtube.com/watch?v=33pBg_UaeJk\"\n",
     "\n",
-    "OUTPUT_DIR = './cache/'  # target output for preoprocessing is cache\n",
+    "OUTPUT_DIR = 'cache/'  # target output for preoprocessing is cache\n",
     "extracted_id = VIDEO_URL.split(\"/\")[-1]\n",
     "\n",
     "mkdir(OUTPUT_DIR)"
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +58,7 @@
     "    'resolution').desc().first().download(output_path=OUTPUT_DIR)\n",
     "\n",
     "extracted_title = yt.streams[0].default_filename\n",
-    "OUTPUT_FILE = \"cache/\" + extracted_title"
+    "OUTPUT_FILE = OUTPUT_DIR + extracted_title"
    ]
   },
   {
@@ -69,7 +77,6 @@
     "import av\n",
     "import numpy as np\n",
     "from transformers import AutoProcessor, AutoModel\n",
-    "from huggingface_hub import hf_hub_download\n",
     "np.random.seed(0)\n",
     "\n",
     "import pandas as pd\n",
@@ -138,6 +145,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# decord notes:\n",
+    "# https://github.com/dmlc/decord?tab=readme-ov-file            aarch64: build from source to avoid shambles\n",
+    "# $ cd decord/python && pip install .                          \n",
+    "\n",
+    "# https://github.com/huggingface/transformers/issues/21054     CUDA GPU support for inference + XClip issue\n",
+    "# https://github.com/huggingface/datasets/issues/5225          dataset video support\n",
     "from decord import VideoReader, cpu\n",
     "\n",
     "videoreader = VideoReader(OUTPUT_FILE, num_threads=1, ctx=cpu(0))\n"
@@ -191,17 +204,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get Video"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# decord notes:\n",
-    "# https://github.com/dmlc/decord?tab=readme-ov-file            aarch64: build from source to avoid shambles\n",
-    "# $ cd decord/python && pip install .                          \n",
+    "def get_video(row):\n",
+    "    return videoreader.get_batch(sample_frame_indices(clip_len=SAMPLE_SIZE, frame_sample_rate=FRAME_SAMPLE_RATE, seg_len=container.streams.video[0].frames, end_idx=row['end_frame'])).asnumpy()\n",
     "\n",
-    "# https://github.com/huggingface/transformers/issues/21054     CUDA GPU support for inference + XClip issue\n",
-    "# https://github.com/huggingface/datasets/issues/5225          dataset video support"
+    "df['video'] = df.apply(get_video, axis=1)\n",
+    "\n",
+    "df"
    ]
   },
   {
@@ -276,31 +296,6 @@
     "    \"Neutral\",\n",
     "    \"Not Highlight Worthy\",\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from PIL import Image\n",
-    "import numpy\n",
-    "\n",
-    "def get_video(row):\n",
-    "    return videoreader.get_batch(sample_frame_indices(clip_len=SAMPLE_SIZE, frame_sample_rate=FRAME_SAMPLE_RATE, seg_len=container.streams.video[0].frames, end_idx=row['end_frame'])).asnumpy()\n",
-    "\n",
-    "df['video'] = df.apply(get_video, axis=1)\n",
-    "\n",
-    "df"
    ]
   },
   {
